--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{   "author":"vivian",
+    "description":"a project that does something awesome - estou aprendendo sobre backend e apis!",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
@@ -10,5 +11,10 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-	}
+	},
+	"keywords": [
+		"freecodecamp","fcckey"
+	],
+	"license":"MIT",
+	"version": "1.2.0"
 }
